<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context="uk.co.zac_h.spacex.feature.settings.company.CompanyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/medium_margin">

        <uk.co.zac_h.spacex.core.ui.BannerView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            style="?attr/circularProgressIndicatorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="
            company_logo,
            company_summary,
            company_founded,
            company_ceo" />

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/xxxlarge_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:contentDescription="@string/spacex_logo_desc"
            android:src="@drawable/ic_spacex_logo"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:tint="?colorOnBackground" />

        <TextView
            android:id="@+id/company_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:textAppearance="@style/Details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_logo"
            tools:maxLines="15"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/company_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/website_label"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_web_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_summary"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/company_wiki"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:text="@string/wikipedia_label"
            android:visibility="gone"
            app:icon="@drawable/ic_wikipedia"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_website"
            tools:ignore="MissingConstraints"
            tools:visibility="visible" />

        <uk.co.zac_h.spacex.core.ui.LabelValueView
            android:id="@+id/company_founded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            app:label="@string/founded_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_wiki"
            tools:text="2002" />

        <uk.co.zac_h.spacex.core.ui.LabelValueView
            android:id="@+id/company_ceo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            app:label="@string/ceo_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_founded"
            tools:text="Elon Musk" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
